fix css overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,7 @@
 html {
   scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
+  overflow-x: hidden;
 }
 body {
   margin: 0;
